--- a/package.json
+++ b/package.json
@@ -5,20 +5,32 @@
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@hookform/resolvers": "^2.8.8",
+    "@mui/icons-material": "^5.5.1",
+    "@mui/lab": "^5.0.0-alpha.76",
     "@mui/material": "^5.5.0",
     "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "@uppy/react": "^2.1.2",
     "axios": "^0.26.1",
+    "copy-to-clipboard": "^3.3.1",
+    "firebase": "^9.6.10",
+    "formik": "^2.2.9",
     "install": "^0.13.0",
     "npm": "^8.5.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^12.0.4",
+    "react-hook-form": "^7.29.0",
+    "react-image-crop": "^10.0.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "uuid": "^8.3.2",
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
