--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@uppy/react": "^2.1.2",
     "axios": "^0.26.1",
     "copy-to-clipboard": "^3.3.1",
+    "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
     "firebase": "^9.6.10",
     "formik": "^2.2.9",
     "install": "^0.13.0",
     "npm": "^8.5.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-dropzone": "^12.0.4",
     "react-hook-form": "^7.29.0",
     "react-image-crop": "^10.0.0",
