--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "draft-js-export-html": "^1.4.1",
     "firebase": "^9.6.10",
     "formik": "^2.2.9",
+    "fuzzy-search": "^3.2.1",
     "install": "^0.13.0",
     "npm": "^8.5.5",
     "react": "^17.0.2",
