--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dropzone": "^12.0.4",
     "react-hook-form": "^7.29.0",
     "react-image-crop": "^10.0.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
