--- a/package.json
+++ b/package.json
@@ -19,17 +19,19 @@
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
     "firebase": "^9.6.10",
-    "formik": "^2.2.9",
     "fuzzy-search": "^3.2.1",
     "install": "^0.13.0",
     "npm": "^8.5.5",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-dropzone": "^12.0.4",
     "react-hook-form": "^7.29.0",
     "react-image-crop": "^10.0.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-player": "^2.10.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
