--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "fuzzy-search": "^3.2.1",
     "install": "^0.13.0",
     "npm": "^8.5.5",
+    "posthog-js": "^1.23.0",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-dropzone": "^12.0.4",
+    "react-ga4": "^1.4.1",
     "react-hook-form": "^7.29.0",
     "react-image-crop": "^10.0.0",
     "react-infinite-scroll-component": "^6.1.0",
