--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^9.6.10",
     "fuzzy-search": "^3.2.1",
     "install": "^0.13.0",
+    "material-ui-phone-number": "^3.0.0",
     "npm": "^8.5.5",
     "posthog-js": "^1.23.0",
     "react": "^17.0.2",
