--- a/package.json
+++ b/package.json
@@ -21,14 +21,12 @@
     "firebase": "^9.6.10",
     "fuzzy-search": "^3.2.1",
     "install": "^0.13.0",
-    "material-ui-phone-number": "^3.0.0",
     "npm": "^8.5.5",
     "posthog-js": "^1.23.0",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
-    "react-draft-wysiwyg": "^1.14.7",
     "react-dropzone": "^12.0.4",
     "react-ga4": "^1.4.1",
     "react-hook-form": "^7.29.0",
@@ -40,11 +38,13 @@
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.7",
     "react-spring": "^9.5.4",
+    "source-map-explorer": "^2.5.3",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
