--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.7",
     "react-spring": "^9.5.4",
+    "react-transition-group": "^4.4.5",
     "source-map-explorer": "^2.5.3",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4",
